# ade

./: .gitignore  .idd-config.json  CLAUDE.md  Cargo.toml  README.md  clippy.toml  constitution_registry.toml
crates/ade_core/: Cargo.toml
crates/ade_core/src/: lib.rs
crates/ade_core/tests/: fork_choice_corpus.rs  header_validate_compose.rs  hfc_schedule_corpus.rs  leader_schedule_corpus.rs  nonce_evolution_corpus.rs  op_cert_counter_corpus.rs  praos_header_validate.rs  praos_state_canonical_roundtrip.rs  rollback_corpus.rs  vrf_cert_threshold.rs
crates/ade_core_interop/: Cargo.toml
crates/ade_core_interop/src/: follow.rs  lib.rs  local_tx_submission.rs  tx_submission.rs
crates/ade_core_interop/tests/: follow_offline_replay.rs  live_block_fetch_session.rs  live_block_follow_session.rs  live_consensus_session.rs  live_tx_submission_session.rs  local_tx_submission_ingress.rs  tx_submission_ingress.rs
crates/ade_crypto/: Cargo.toml
crates/ade_crypto/src/: blake2b.rs  ed25519.rs  error.rs  kes.rs  lib.rs  traits.rs  utxo_set_commitment.rs  vrf.rs
crates/ade_ledger/: Cargo.toml
crates/ade_ledger/src/: alonzo.rs  babbage.rs  block_body_hash.rs  bootstrap_bridge.rs  bootstrap_manifest.rs  bootstrap_reward_update.rs  byron.rs  cert_classify.rs  consensus_input_extract.rs  consensus_view.rs  conway.rs  cred.rs  delegation.rs  epoch.rs  epoch_accumulator.rs  error.rs  fingerprint.rs  genesis_source.rs  gov_cert.rs  governance.rs  hfc.rs  late_era_validation.rs  ledgerdb_state.rs  ledgerdb_tables.rs  lib.rs  mary.rs  mithril_utxo_materialize.rs  phase.rs  plutus_eval.rs  pointer_resolve.rs  pparams.rs  pre_resolve.rs  rational.rs  recovered_anchor_point.rs  reduced_advance.rs  reduced_aggregate.rs  reduced_epoch_view.rs  reduced_snapshot.rs  reduced_utxo.rs  rules.rs  (+9 more)
crates/ade_ledger/tests/: block_validity_adversarial_corpus.rs  block_validity_compose.rs  block_validity_positive_corpus.rs  block_validity_types.rs  cert_state_corpus.rs  consensus_input_extract.rs  consensus_view.rs  conway_conservation_adversarial.rs  conway_conservation_full.rs  conway_conservation_positive_synthetic.rs  credential_fidelity_corpus.rs  envelope_corpus_pin.rs  gov_state_corpus.rs  ledgerdb_nonutxo_hermetic.rs  ledgerdb_state_hermetic.rs  mempool_admission.rs  mempool_ingress.rs  tx_validity_adversarial_corpus.rs  tx_validity_compose.rs  tx_validity_positive_corpus.rs  tx_witness_closure.rs  wal_rollback_ai_s1.rs
crates/ade_mem_diag/: Cargo.toml
crates/ade_mem_diag/src/: lib.rs
crates/ade_network/: Cargo.toml
crates/ade_network/src/: lib.rs
crates/ade_network/tests/: agency_trace_real_capture.rs  block_fetch_frame_corpus.rs  block_fetch_real_capture_corpus.rs  chain_sync_real_capture_corpus.rs  chain_sync_signal_trace.rs  handshake_real_capture_corpus.rs  handshake_responder_cardano_node_fixture.rs  handshake_version_negotiation.rs  keep_alive_event_trace.rs  keep_alive_real_capture_corpus.rs  local_chain_sync_event_trace.rs  local_state_query_event_trace.rs  local_tx_monitor_event_trace.rs  local_tx_submission_event_trace.rs  malformed_frame_real_capture.rs  n2c_handshake_real_capture_corpus.rs  n2c_protocols_real_capture_corpus.rs  peer_sharing_event_trace.rs  peer_sharing_real_capture_corpus.rs  serve_chainsync_findintersect_cardano_node_fixture.rs  session_replay_equivalence.rs  tx_submission2_mempool_trace.rs  tx_submission2_real_capture_corpus.rs  tx_submission2_server_capture_loopback.rs
crates/ade_node/: Cargo.toml
crates/ade_node/src/: ba02_evidence.rs  ba02_pass.rs  bootstrap_export.rs  candidate_aggregator.rs  cli.rs  convergence_evidence.rs  epoch_activate.rs  epoch_activation.rs  epoch_candidate.rs  epoch_rebind.rs  epoch_source_window.rs  epoch_wire.rs  fair_merge.rs  forge_intent.rs  fork_switch.rs  key_gen.rs  lca_walk.rs  lib.rs  main.rs  mithril_fetch.rs  native_firstrun.rs  node.rs  node_lifecycle.rs  node_sync.rs  operator_forge.rs  ops_log.rs  post_switch_continuity.rs  produce_mode.rs  rehearsal_evidence.rs  rehearsal_pass.rs  run_loop_planner.rs  selector_state.rs  wire_only.rs
crates/ade_node/tests/: admission_adversarial_corpus.rs  admission_cross_epoch_guard.rs  admission_live_operator_pass.rs  admission_raw_block_framing.rs  admission_replay_equivalence.rs  apply_driver_ai_s3.rs  authority_fatal_decode.rs  ba02_gate_archived_home.rs  forge_handler_variants.rs  forge_succeeds.rs  live_fork_choice_ai_s4bii.rs  native_firstrun_live.rs  node_c1_dry_run_rehearsal.rs  node_c1_genesis_rehearsal.rs  node_c1_serve_live.rs  node_operator_pass_ba02.rs  node_path_fidelity.rs  node_spine_serve_loopback.rs  participant_venue_ai_s4bi.rs  phase4_n_ae_recover_serve_continuity_diag.rs  produce_loopback.rs  receive_detector_ai_s2.rs  rehearsal_gate_archived_home.rs  reselection_replay_s5.rs  shutdown_resume_identity.rs  wire_only_loopback.rs
crates/ade_plutus/: Cargo.toml
crates/ade_plutus/src/: cost_model.rs  evaluator.rs  lib.rs  script_context.rs  script_verdict.rs  tx_eval.rs
crates/ade_plutus/tests/: conway_validity_range_reproducer.rs  encoder_aiken_compat.rs  end_to_end_plutus_eval.rs
crates/ade_runtime/: Cargo.toml
crates/ade_runtime/examples/: seed_smoke.rs
crates/ade_runtime/src/: bootstrap.rs  bootstrap_anchor.rs  clock.rs  genesis_bootstrap.rs  lib.rs  mithril_bootstrap.rs  mithril_native_assembly.rs  recovered_anchor.rs  recovery.rs  seed_consensus_merge.rs  seed_consensus_provenance.rs  seed_epoch_lineage.rs
crates/ade_runtime/tests/: cross_impl_server_pipeline.rs  eview_shadow_ade1_regression.rs  genesis_parser_corpus.rs  ledgerdb_nonutxo_mithril.rs  ledgerdb_state_corpus.rs  ledgerdb_state_mithril.rs  ledgerdb_tables_decode.rs  ledgerdb_tables_oracle.rs  live_consensus_inputs_smoke.rs  mithril_tables_to_utxostate.rs  n2n_server_two_peer_determinism.rs  orchestrator_peer_isolation.rs  orchestrator_replay_equivalence.rs  producer_pipeline_slot_deadline.rs  receive_pipeline_corpus_drive.rs  receive_rollback_integration.rs  receive_session_transcript_replay.rs  receive_two_peer_independence.rs  (+6 more)
crates/ade_testkit/: Cargo.toml
(+12543 files in other folders)
