[package]
name = "ade_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ade_types = { path = "../ade_types" }
ade_crypto = { path = "../ade_crypto" }
minicbor = { version = "0.25", default-features = false, features = ["alloc"] }

[dev-dependencies]
ade_testkit = { path = "../ade_testkit" }
ade_codec = { path = "../ade_codec" }
serde_json = "1"
cardano-crypto = { version = "1.0", default-features = false, features = ["vrf-draft03"] }
ed25519-dalek = "2"
