[package]
name = "ade_ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
ade_types = { path = "../ade_types" }
ade_crypto = { path = "../ade_crypto" }
ade_codec = { path = "../ade_codec" }
ade_core = { path = "../ade_core" }
ade_plutus = { path = "../ade_plutus" }
minicbor = { version = "0.25", default-features = false, features = ["alloc"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

[dev-dependencies]
ade_testkit = { path = "../ade_testkit" }
ed25519-dalek = "2"
