[package]
name = "ade_network"
version = "0.1.0"
edition = "2021"

[dependencies]
ade_types = { path = "../ade_types" }
ade_codec = { path = "../ade_codec" }
# tokio is confined to ade_network::mux::transport (RED).
# DC-CORE-01 prohibits tokio in any BLUE submodule; enforced by
# ci/ci_check_no_async_in_blue.sh.
tokio = { version = "1", features = ["net", "rt", "io-util", "macros", "time"] }

[[bin]]
name = "ade_handshake_capture"
path = "src/bin/capture_handshake.rs"

[[bin]]
name = "ade_chain_sync_capture"
path = "src/bin/capture_chain_sync.rs"

[[bin]]
name = "ade_block_fetch_capture"
path = "src/bin/capture_block_fetch.rs"

[[bin]]
name = "ade_keep_alive_capture"
path = "src/bin/capture_keep_alive.rs"

[[bin]]
name = "ade_peer_sharing_capture"
path = "src/bin/capture_peer_sharing.rs"

[[bin]]
name = "ade_n2c_handshake_capture"
path = "src/bin/capture_n2c_handshake.rs"

[dev-dependencies]
