[package]
name = "ade_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ade_node"
path = "src/main.rs"

[dependencies]
ade_types = { path = "../ade_types" }
ade_core = { path = "../ade_core" }
ade_crypto = { path = "../ade_crypto" }
ade_ledger = { path = "../ade_ledger" }
ade_runtime = { path = "../ade_runtime" }
ade_network = { path = "../ade_network" }
ade_codec = { path = "../ade_codec" }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "io-util", "macros", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
ade_testkit = { path = "../ade_testkit" }
tempfile = "3"
cardano-crypto = { version = "1.0", default-features = false, features = ["vrf-draft03", "kes-sum", "dsign"] }
ed25519-dalek = "2"
