[package]
name = "ade_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ade_types = { path = "../ade_types" }
ade_core = { path = "../ade_core" }
ade_crypto = { path = "../ade_crypto" }
ade_codec = { path = "../ade_codec" }
# Persistent ChainDb backing store (S-34, Tier 5 choice).
# See docs/clusters/PHASE4-N-D/S-34.md §O-34.1.
# Pure Rust, ACID, single-file. MIT/Apache.
redb = "2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
ade_testkit = { path = "../ade_testkit" }
cardano-crypto = { version = "1.0", default-features = false, features = ["vrf-draft03"] }
