[package]
name = "ade_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ade_types = { path = "../ade_types" }
ade_core = { path = "../ade_core" }
ade_crypto = { path = "../ade_crypto" }
ade_codec = { path = "../ade_codec" }
ade_ledger = { path = "../ade_ledger" }
# Producer-side server response paths (PHASE4-N-G). The GREEN
# adapter + trait impls in `producer::broadcast_to_served` and
# `producer::served_chain_lookups` host the BLUE reducer
# interface bindings.
ade_network = { path = "../ade_network" }
# Persistent ChainDb backing store (S-34, Tier 5 choice).
# See docs/clusters/PHASE4-N-D/S-34.md §O-34.1.
# Pure Rust, ACID, single-file. MIT/Apache.
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RED producer signing (PHASE4-N-C S1). Same feature set as ade_crypto:
# no new VRF/KES algorithms are introduced via features in this crate.
cardano-crypto = { version = "1.0", default-features = false, features = ["vrf-draft03", "kes-sum", "dsign"] }
# Cold-key (Ed25519) derivation in RED producer/signing. Matches the
# ed25519-dalek version already used by ade_crypto.
ed25519-dalek = "2"

[dev-dependencies]
tempfile = "3"
ade_testkit = { path = "../ade_testkit" }
