[package]
name = "ade_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ade_types = { path = "../ade_types" }
ade_core = { path = "../ade_core" }
ade_crypto = { path = "../ade_crypto" }
ade_codec = { path = "../ade_codec" }
ade_ledger = { path = "../ade_ledger" }
# Producer-side server response paths (PHASE4-N-G). The GREEN
# adapter + trait impls in `producer::broadcast_to_served` and
# `producer::served_chain_lookups` host the BLUE reducer
# interface bindings.
ade_network = { path = "../ade_network" }
# Persistent ChainDb backing store (S-34, Tier 5 choice).
# See docs/clusters/PHASE4-N-D/S-34.md §O-34.1.
# Pure Rust, ACID, single-file. MIT/Apache.
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bech32 decoder for cardano-cli `query utxo` JSON address fields
# (PHASE4-N-M-A S1). Used ONLY by the GREEN seed importer; BLUE
# files do not depend on this.
bech32 = "0.11"
# Base58 decoder for Byron-era addresses emitted by cardano-cli
# (PHASE4-N-M-A1.1 slice A1.2). Same scoping discipline as bech32:
# GREEN-only, imported only by `seed_import`.
base58 = "0.2"
# RED producer signing. After PHASE4-N-P S5, ade_runtime no longer
# imports `cardano_crypto::kes::*` — the BLUE-owned algorithm in
# `ade_crypto::kes_sum` is the production signer. The `kes-sum`
# feature has been dropped; VRF + DSIGN paths continue to use
# cardano-crypto upstream (separate future-cluster concerns).
cardano-crypto = { version = "1.0", default-features = false, features = ["vrf-draft03", "dsign"] }
# Cold-key (Ed25519) derivation in RED producer/signing. Matches the
# ed25519-dalek version already used by ade_crypto.
ed25519-dalek = "2"
# Tokio is confined to the RED orchestrator runner files
# (`orchestrator/peer_session.rs`, `orchestrator/leadership_session.rs`,
# `orchestrator/n2n_server_pump.rs`). The GREEN orchestrator core
# (`orchestrator/core.rs`, `orchestrator/event.rs`,
# `orchestrator/state.rs`, `orchestrator/mod.rs`) MUST NOT import
# tokio — enforced by `ci/ci_check_orchestrator_core_purity.sh` and
# `ci/ci_check_clock_seam.sh`.
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "io-util", "macros", "time", "sync", "signal"] }

[dev-dependencies]
tempfile = "3"
ade_testkit = { path = "../ade_testkit" }
