[package]
name = "ade_testkit"
version = "0.1.0"
edition = "2021"

[dependencies]
ade_codec = { path = "../ade_codec" }
ade_core = { path = "../ade_core" }
ade_crypto = { path = "../ade_crypto" }
ade_ledger = { path = "../ade_ledger" }
ade_plutus = { path = "../ade_plutus" }
ade_runtime = { path = "../ade_runtime" }
ade_types = { path = "../ade_types" }
blake2 = "0.10"
ed25519-dalek = "2"
flate2 = "1"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
cardano-crypto = { version = "1.0", default-features = false, features = ["vrf-draft03"] }
